--- a/account-decoder/Cargo.toml
+++ b/account-decoder/Cargo.toml
@@ -19,7 +19,7 @@ lazy_static = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
-solana-config-program = { workspace = true }
+solana-config-program-api = { workspace = true }
 solana-sdk = { workspace = true }
 spl-token = { workspace = true, features = ["no-entrypoint"] }
 spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
