--- a/new_crates/pubkey/Cargo.toml
+++ b/new_crates/pubkey/Cargo.toml
@@ -31,6 +31,13 @@ borsh = ["dep:borsh", "dep:borsh0-9", "solana-hash/borsh"]
 wasm-bindgen = ["dep:wasm-bindgen", "dep:solana-wasm-bindgen", "solana-hash/wasm-bindgen"]
 
 [target.'cfg(target_os = "solana")'.dependencies]
+# This is currently needed to build on-chain programs reliably.
+# Borsh 0.10 may pull in hashbrown 0.13, which uses ahash 0.8, which uses
+# getrandom 0.2 underneath. This explicit dependency allows for no-std if cargo
+# upgrades Borsh's dependency to hashbrown 0.13.
+# Remove this once borsh 0.11 or 1.0 is released, which correctly declares the
+# hashbrown dependency as optional.
+getrandom = { workspace = true, features = ["custom"] }
 solana-syscall-core = { workspace = true }
 
 [dev-dependencies]
