--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ members = [
     "keygen",
     "ledger",
     "ledger-tool",
+    "load-program-metrics-submit",
     "local-cluster",
     "log-analyzer",
     "logger",
@@ -357,6 +358,7 @@ solana-gossip = { path = "gossip", version = "=2.1.0" }
 solana-inline-spl = { path = "inline-spl", version = "=2.1.0" }
 solana-ledger = { path = "ledger", version = "=2.1.0" }
 solana-loader-v4-program = { path = "programs/loader-v4", version = "=2.1.0" }
+solana-load-program-metrics-submit = { path = "load-program-metrics-submit", version = "=0.0.1" }
 solana-local-cluster = { path = "local-cluster", version = "=2.1.0" }
 solana-logger = { path = "logger", version = "=2.1.0" }
 solana-measure = { path = "measure", version = "=2.1.0" }
