--- a/programs/loader-v4/Cargo.toml
+++ b/programs/loader-v4/Cargo.toml
@@ -11,6 +11,7 @@ edition = { workspace = true }
 [dependencies]
 log = { workspace = true }
 solana-compute-budget = { workspace = true }
+solana-load-program-metrics-submit = { workspace = true }
 solana-measure = { workspace = true }
 solana-program-runtime = { workspace = true }
 solana-sdk = { workspace = true }
