--- a/rpc-client/Cargo.toml
+++ b/rpc-client/Cargo.toml
@@ -25,6 +25,7 @@ solana-account-decoder = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-sdk = { workspace = true }
 solana-transaction-status = { workspace = true }
+solana-ui-account = { workspace = true }
 solana-version = { workspace = true }
 solana-vote-program = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
