--- a/Cargo.toml
+++ b/Cargo.toml
@@ -386,6 +386,7 @@ solana-transaction-status = { path = "transaction-status", version = "=2.0.0" }
 solana-transaction-metrics-tracker = { path = "transaction-metrics-tracker", version = "=2.0.0" }
 solana-turbine = { path = "turbine", version = "=2.0.0" }
 solana-udp-client = { path = "udp-client", version = "=2.0.0" }
+solana-ui-account = { path = "ui-account", version = "=2.0.0" }
 solana-version = { path = "version", version = "=2.0.0" }
 solana-vote = { path = "vote", version = "=2.0.0" }
 solana-vote-program = { path = "programs/vote", version = "=2.0.0" }
