--- a/pubsub-client/Cargo.toml
+++ b/pubsub-client/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-sdk = { workspace = true }
+solana-ui-account = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tokio-stream = { workspace = true }
