set new crate version to 0.0.1

--- a/ui-account/Cargo.toml
+++ b/ui-account/Cargo.toml
@@ -2,7 +2,7 @@
 name = "solana-ui-account"
 description = "Solana UI Account"
 documentation = "https://docs.rs/solana-ui-account"
-version = { workspace = true }
+version = "0.0.1"
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
