fix Cargo.toml files

--- a/curve25519/Cargo.toml
+++ b/curve25519/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "solana--curve25519"
+name = "solana-curve25519"
 description = "Solana Curve25519 Syscalls"
 documentation = "https://docs.rs/solana-curve25519"
 version = "0.0.1"
