--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "connection-cache",
     "core",
     "cost-model",
+    "curve25519",
     "dos",
     "download-utils",
     "entry",
@@ -128,7 +129,6 @@ members = [
     "wen-restart",
     "zk-keygen",
     "zk-sdk",
-    "curve25519",
     "zk-token-sdk",
 ]
 
@@ -341,6 +341,7 @@ solana-config-program = { path = "programs/config", version = "=2.0.0" }
 solana-connection-cache = { path = "connection-cache", version = "=2.0.0", default-features = false }
 solana-core = { path = "core", version = "=2.0.0" }
 solana-cost-model = { path = "cost-model", version = "=2.0.0" }
+solana-curve25519 = { path = "curve25519", version = "=0.0.1" }
 solana-download-utils = { path = "download-utils", version = "=2.0.0" }
 solana-entry = { path = "entry", version = "=2.0.0" }
 solana-faucet = { path = "faucet", version = "=2.0.0" }
@@ -406,7 +407,6 @@ solana-wen-restart = { path = "wen-restart", version = "=2.0.0" }
 solana-zk-elgamal-proof-program = { path = "programs/zk-elgamal-proof", version = "=2.0.0" }
 solana-zk-keygen = { path = "zk-keygen", version = "=2.0.0" }
 solana-zk-sdk = { path = "zk-sdk", version = "=2.0.0" }
-solana-curve25519 = { path = "zk-token-curve25519", version = "=0.0.1" }
 solana-zk-token-proof-program = { path = "programs/zk-token-proof", version = "=2.0.0" }
 solana-zk-token-sdk = { path = "zk-token-sdk", version = "=2.0.0" }
 solana_rbpf = "=0.8.1"
