--- a/frozen-abi/Cargo.toml
+++ b/frozen-abi/Cargo.toml
@@ -14,7 +14,6 @@ bs58 = { workspace = true }
 bv = { workspace = true, features = ["serde"] }
 log = { workspace = true, features = ["std"] }
 serde = { workspace = true, features = ["derive", "rc"] }
-serde_bytes = { workspace = true }
 serde_derive = { workspace = true }
 sha2 = { workspace = true }
 solana-frozen-abi-macro = { workspace = true }
@@ -24,6 +23,9 @@ thiserror = { workspace = true }
 generic-array = { workspace = true, features = ["serde", "more_lengths"] }
 im = { workspace = true, features = ["rayon", "serde"] }
 memmap2 = { workspace = true }
+
+[dev-dependencies]
+serde_bytes = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dev-dependencies]
 bitflags = { workspace = true }
