--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -53,8 +53,8 @@ solana-bucket-map = { workspace = true }
 solana-compute-budget-program = { workspace = true }
 solana-config-program = { workspace = true }
 solana-cost-model = { workspace = true }
-solana-frozen-abi = { workspace = true }
-solana-frozen-abi-macro = { workspace = true }
+solana-frozen-abi = { workspace = true, optional = true }
+solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-inline-spl = { workspace = true }
 solana-loader-v4-program = { workspace = true }
 solana-measure = { workspace = true }
@@ -106,6 +106,7 @@ rustc_version = { workspace = true }
 
 [features]
 dev-context-only-utils = []
+frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 
 [[bench]]
 name = "prioritization_fee_cache"
