--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -91,7 +91,11 @@ rustc_version = { workspace = true }
 
 [features]
 dev-context-only-utils = []
-frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+frozen-abi = [
+    "dep:solana-frozen-abi",
+    "dep:solana-frozen-abi-macro",
+    "solana-runtime/frozen-abi",
+]
 
 [lib]
 crate-type = ["lib"]
