--- a/programs/vote/Cargo.toml
+++ b/programs/vote/Cargo.toml
@@ -40,4 +40,10 @@ name = "solana_vote_program"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+frozen-abi = [
+    "dep:solana-frozen-abi",
+    "dep:solana-frozen-abi-macro",
+    "solana-program/frozen-abi",
+    "solana-program-runtime/frozen-abi",
+    "solana-sdk/frozen-abi",
+]
