--- a/version/Cargo.toml
+++ b/version/Cargo.toml
@@ -20,7 +20,11 @@ solana-sdk = { workspace = true }
 
 [features]
 dummy-for-ci-check = []
-frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+frozen-abi = [
+    "dep:solana-frozen-abi",
+    "dep:solana-frozen-abi-macro",
+    "solana-sdk/frozen-abi",
+]
 
 [lib]
 name = "solana_version"
