--- a/vote/Cargo.toml
+++ b/vote/Cargo.toml
@@ -36,4 +36,8 @@ rustc_version = { workspace = true }
 
 [features]
 dev-context-only-utils = []
-frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+frozen-abi = [
+    "dep:solana-frozen-abi",
+    "dep:solana-frozen-abi-macro",
+    "solana-sdk/frozen-abi",
+]
