--- a/zk-sdk/Cargo.toml
+++ b/zk-sdk/Cargo.toml
@@ -24,7 +24,7 @@ tiny-bip39 = { workspace = true }
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 aes-gcm-siv = { workspace = true }
 bincode = { workspace = true }
-curve25519-dalek = { workspace = true, features = ["serde"] }
+curve25519-dalek = { workspace = true }
 itertools = { workspace = true }
 lazy_static = { workspace = true }
 rand = { version = "0.7" }
