--- a/programs/sbf/Cargo.toml
+++ b/programs/sbf/Cargo.toml
@@ -24,6 +24,7 @@ num-traits = "0.2"
 rand = "0.8"
 rustversion = "1.0.14"
 serde = "1.0.112"
+serde_derive = "1.0.112"
 serde_json = "1.0.56"
 solana-account-decoder = { path = "../../account-decoder", version = "=2.0.0" }
 solana-accounts-db = { path = "../../accounts-db", version = "=2.0.0" }
