--- a/accounts-db/Cargo.toml
+++ b/accounts-db/Cargo.toml
@@ -80,11 +80,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 rustc_version = { workspace = true }
 
 [features]
-dev-context-only-utils = [
-    "dep:qualifier_attr",
-    "dep:solana-stake-program",
-    "dep:solana-vote-program",
-]
+dev-context-only-utils = ["dep:qualifier_attr", "dep:solana-stake-program", "dep:solana-vote-program"]
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
