--- a/poseidon/Cargo.toml
+++ b/poseidon/Cargo.toml
@@ -2,7 +2,7 @@
 name = "solana-poseidon"
 description = "Solana Poseidon hashing"
 documentation = "https://docs.rs/solana-poseidon"
-version = "2.0.0"
+version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 homepage = { workspace = true }
