--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -17,6 +17,7 @@ edition = { workspace = true }
 program = []
 
 default = [
+  "borsh",
   "full" # functionality that is not compatible or needed for on-chain programs
 ]
 full = [
@@ -33,7 +34,9 @@ full = [
     "sha3",
     "digest",
 ]
+borsh = ["dep:borsh", "solana-program/borsh"]
 dev-context-only-utils = [
+  "borsh",
   "qualifier_attr"
 ]
 frozen-abi = [
@@ -45,7 +48,7 @@ frozen-abi = [
 [dependencies]
 bincode = { workspace = true }
 bitflags = { workspace = true, features = ["serde"] }
-borsh = { workspace = true }
+borsh = { workspace = true, optional = true }
 bs58 = { workspace = true }
 bytemuck = { workspace = true, features = ["derive"] }
 byteorder = { workspace = true, optional = true }
