--- a/Cargo.toml
+++ b/Cargo.toml
@@ -397,6 +397,7 @@ solana-runtime = { path = "runtime", version = "=2.1.0" }
 solana-runtime-transaction = { path = "runtime-transaction", version = "=2.1.0" }
 solana-sdk = { path = "sdk", version = "=2.1.0" }
 solana-sdk-macro = { path = "sdk/macro", version = "=2.1.0" }
+solana-secp256k1-recover = { path = "curves/secp256k1-recover", version = "=2.1.0", default-features = false }
 solana-send-transaction-service = { path = "send-transaction-service", version = "=2.1.0" }
 solana-stake-program = { path = "programs/stake", version = "=2.1.0" }
 solana-storage-bigtable = { path = "storage-bigtable", version = "=2.1.0" }
