--- a/programs/sbf/Cargo.toml
+++ b/programs/sbf/Cargo.toml
@@ -48,6 +48,7 @@ solana-sbf-rust-param-passing-dep = { path = "rust/param_passing_dep", version =
 solana-sbf-rust-realloc-dep = { path = "rust/realloc_dep", version = "=2.1.0" }
 solana-sbf-rust-realloc-invoke-dep = { path = "rust/realloc_invoke_dep", version = "=2.1.0" }
 solana-sdk = { path = "../../sdk", version = "=2.1.0" }
+solana-secp256k1-recover = { path = "../../curves/secp256k1-recover", version = "=2.1.0" }
 solana-svm = { path = "../../svm", version = "=2.1.0" }
 solana-timings = { path = "../../timings", version = "=2.1.0" }
 solana-transaction-status = { path = "../../transaction-status", version = "=2.1.0" }
