--- a/curves/secp256k1-recover/Cargo.toml
+++ b/curves/secp256k1-recover/Cargo.toml
@@ -11,6 +11,7 @@ edition = { workspace = true }
 
 [dependencies]
 borsh = { workspace = true, optional = true }
+solana-frozen-abi = { workspace = true, optional = true }
 thiserror = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
@@ -24,6 +25,9 @@ solana-secp256k1-recover = { path = ".", features = ["borsh"] }
 [target.'cfg(not(target_os = "solana"))'.dev-dependencies]
 libsecp256k1 = { workspace = true, features = ["hmac"] }
 
+[build-dependencies]
+rustc_version = { workspace = true }
 
 [features]
 borsh = ["dep:borsh"]
+frozen-abi = ["dep:solana-frozen-abi"]
