--- a/accounts-bench/Cargo.toml
+++ b/accounts-bench/Cargo.toml
@@ -15,6 +15,7 @@ rayon = { workspace = true }
 solana-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
 solana-logger = { workspace = true }
 solana-measure = { workspace = true }
+solana-rent-collector = { workspace = true }
 solana-sdk = { workspace = true }
 solana-version = { workspace = true }
 
