--- a/svm/Cargo.toml
+++ b/svm/Cargo.toml
@@ -23,6 +23,7 @@ solana-loader-v4-program = { workspace = true }
 solana-measure = { workspace = true }
 solana-metrics = { workspace = true }
 solana-program-runtime = { workspace = true }
+solana-rent-collector = { workspace = true }
 solana-sdk = { workspace = true }
 solana-system-program = { workspace = true }
 solana-type-overrides = { workspace = true }
