--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ members = [
     "sdk/package-metadata-macro",
     "sdk/program",
     "send-transaction-service",
+    "short-vec",
     "stake-accounts",
     "storage-bigtable",
     "storage-bigtable/build-proto",
@@ -399,6 +400,7 @@ solana-sdk = { path = "sdk", version = "=2.1.0" }
 solana-sdk-macro = { path = "sdk/macro", version = "=2.1.0" }
 solana-secp256k1-recover = { path = "curves/secp256k1-recover", version = "=2.1.0", default-features = false }
 solana-send-transaction-service = { path = "send-transaction-service", version = "=2.1.0" }
+solana-short-vec = { path = "short-vec", version = "=2.1.0" }
 solana-stake-program = { path = "programs/stake", version = "=2.1.0" }
 solana-storage-bigtable = { path = "storage-bigtable", version = "=2.1.0" }
 solana-storage-proto = { path = "storage-proto", version = "=2.1.0" }
