--- a/transaction-metrics-tracker/Cargo.toml
+++ b/transaction-metrics-tracker/Cargo.toml
@@ -18,6 +18,7 @@ log = { workspace = true }
 rand = { workspace = true }
 solana-perf = { workspace = true }
 solana-sdk = { workspace = true }
+solana-short-vec = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
