Update crate description
Co-authored-by: Joe C <joecaulfield29@yahoo.com>

--- a/sanitize/Cargo.toml
+++ b/sanitize/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "solana-sanitize"
-description = "Solana Sanitize Trait"
+description = "Solana Message Sanitization"
 documentation = "https://docs.rs/solana-sanitize"
 version = { workspace = true }
 authors = { workspace = true }
