update entrypoint-consts dependents and re-export in solana-program

--- a/programs/sbf/Cargo.toml
+++ b/programs/sbf/Cargo.toml
@@ -31,6 +31,7 @@ solana-bpf-loader-program = { path = "../bpf_loader", version = "=2.1.0" }
 solana-cli-output = { path = "../../cli-output", version = "=2.1.0" }
 solana-compute-budget = { path = "../../compute-budget", version = "=2.1.0" }
 solana-curve25519 = { path = "../../curves/curve25519", version = "=2.1.0" }
+solana-entrypoint-consts = { path = "../../sdk/entrypoint-consts", version = "=2.1.0" }
 solana-ledger = { path = "../../ledger", version = "=2.1.0" }
 solana-logger = { path = "../../logger", version = "=2.1.0" }
 solana-measure = { path = "../../measure", version = "=2.1.0" }
@@ -92,6 +93,7 @@ solana-accounts-db = { workspace = true }
 solana-bpf-loader-program = { workspace = true }
 solana-cli-output = { workspace = true }
 solana-compute-budget = { workspace = true }
+solana-entrypoint-consts = { workspace = true }
 solana-ledger = { workspace = true }
 solana-logger = { workspace = true }
 solana-measure = { workspace = true }
