--- a/compute-budget/Cargo.toml
+++ b/compute-budget/Cargo.toml
@@ -10,6 +10,7 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
+solana-entrypoint-consts = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-sdk = { workspace = true }
 
