--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -30,6 +30,7 @@ serde_bytes = { workspace = true }
 serde_derive = { workspace = true }
 sha2 = { workspace = true }
 sha3 = { workspace = true }
+solana-entrypoint-consts = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-sanitize = { workspace = true }
