--- a/svm/tests/example-programs/hello-solana/Cargo.toml
+++ b/svm/tests/example-programs/hello-solana/Cargo.toml
@@ -4,6 +4,7 @@ version = "2.1.0"
 edition = "2021"
 
 [dependencies]
+solana-entrypoint-consts = { path = "../../../../sdk/entrypoint-consts", version = "=2.1.0" }
 solana-program = { path = "../../../../sdk/program", version = "=2.1.0" }
 
 [lib]
