fix specialization stuff

--- a/sdk/hash/Cargo.toml
+++ b/sdk/hash/Cargo.toml
@@ -21,6 +21,8 @@ js-sys = { workspace = true }
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
 solana-atomic-u64 = { workspace = true }
+solana-frozen-abi = { workspace = true, optional = true }
+solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-sanitize = { workspace = true }
 thiserror = { workspace = true }
 
@@ -33,4 +35,5 @@ rustc_version = { workspace = true }
 [features]
 borsh = ["dep:borsh"]
 bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
+frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 serde = ["dep:serde", "dep:serde_derive"]
