--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -106,7 +106,8 @@ frozen-abi = [
     "dep:rustc_version",
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
-    "solana-short-vec/frozen-abi",
+    "solana-hash/frozen-abi",
+    "solana-short-vec/frozen-abi"
 ]
 
 [lints]
