--- a/gossip/Cargo.toml
+++ b/gossip/Cargo.toml
@@ -72,6 +72,7 @@ frozen-abi = [
     "solana-perf/frozen-abi",
     "solana-runtime/frozen-abi",
     "solana-sdk/frozen-abi",
+    "solana-short-vec/frozen-abi",
     "solana-version/frozen-abi",
     "solana-vote/frozen-abi",
     "solana-vote-program/frozen-abi",
