--- a/perf/Cargo.toml
+++ b/perf/Cargo.toml
@@ -51,6 +51,7 @@ frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
     "solana-sdk/frozen-abi",
+    "solana-short-vec/frozen-abi",
     "solana-vote-program/frozen-abi",
 ]
 
