make required visibility changes after extracting crate

--- a/cluster-slots-service/Cargo.toml
+++ b/cluster-slots-service/Cargo.toml
@@ -22,3 +22,6 @@ solana-sdk = { workspace = true }
 
 [dev-dependencies]
 solana-streamer = { workspace = true }
+
+[features]
+dev-context-only-utils = []
