update timings dependents

--- a/program-runtime/Cargo.toml
+++ b/program-runtime/Cargo.toml
@@ -12,7 +12,6 @@ edition = { workspace = true }
 [dependencies]
 base64 = { workspace = true }
 bincode = { workspace = true }
-eager = { workspace = true }
 enum-iterator = { workspace = true }
 itertools = { workspace = true }
 libc = { workspace = true }
@@ -29,6 +28,7 @@ solana-log-collector = { workspace = true }
 solana-measure = { workspace = true }
 solana-metrics = { workspace = true }
 solana-sdk = { workspace = true }
+solana-timings = { workspace = true }
 solana-type-overrides = { workspace = true }
 solana-vote = { workspace = true }
 solana_rbpf = { workspace = true }
