--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -30,6 +30,7 @@ solana-program-runtime = { workspace = true }
 solana-runtime = { workspace = true }
 solana-sdk = { workspace = true }
 solana-svm = { workspace = true }
+solana-timings = { workspace = true }
 solana-vote-program = { workspace = true }
 solana_rbpf = { workspace = true }
 thiserror = { workspace = true }
