--- a/programs/sbf/Cargo.toml
+++ b/programs/sbf/Cargo.toml
@@ -49,6 +49,7 @@ solana-sbf-rust-realloc-dep = { path = "rust/realloc_dep", version = "=2.1.0" }
 solana-sbf-rust-realloc-invoke-dep = { path = "rust/realloc_invoke_dep", version = "=2.1.0" }
 solana-sdk = { path = "../../sdk", version = "=2.1.0" }
 solana-svm = { path = "../../svm", version = "=2.1.0" }
+solana-timings = { path = "../../timings", version = "=2.1.0" }
 solana-transaction-status = { path = "../../transaction-status", version = "=2.1.0" }
 solana-type-overrides = { path = "../../type-overrides", version = "=2.1.0" }
 agave-validator = { path = "../../validator", version = "=2.1.0" }
@@ -105,6 +106,7 @@ solana-sbf-rust-realloc-dep = { workspace = true }
 solana-sbf-rust-realloc-invoke-dep = { workspace = true }
 solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
 solana-svm = { workspace = true }
+solana-timings = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-type-overrides = { workspace = true }
 solana_rbpf = { workspace = true }
