--- a/wen-restart/Cargo.toml
+++ b/wen-restart/Cargo.toml
@@ -23,6 +23,7 @@ solana-program = { workspace = true }
 solana-program-runtime = { workspace = true }
 solana-runtime = { workspace = true }
 solana-sdk = { workspace = true }
+solana-timings = { workspace = true }
 solana-vote-program = { workspace = true }
 
 [dev-dependencies]
