--- a/sdk/signature/Cargo.toml
+++ b/sdk/signature/Cargo.toml
@@ -14,8 +14,8 @@ bs58 = { workspace = true }
 ed25519-dalek = { workspace = true }
 generic-array = { workspace = true, features = ["serde", "more_lengths"] }
 rand = { workspace = true }
-serde = { workspace = true }
-serde_derive = { workspace = true }
+serde = { workspace = true, optional = true }
+serde_derive = { workspace = true, optional = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-sanitize = { workspace = true }
@@ -31,6 +31,7 @@ rustc_version = { workspace = true }
 
 [features]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+serde = ["dep:serde", "dep:serde_derive"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
