activate verify feature in tests

--- a/sdk/signature/Cargo.toml
+++ b/sdk/signature/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = { workspace = true }
 [dev-dependencies]
 curve25519-dalek = { workspace = true }
 solana-program = { workspace = true }
+solana-signature = { path = ".", features = ["verify"] }
 
 [build-dependencies]
 rustc_version = { workspace = true }
