only activate serde feature of generic-array when serde feature of solana-signature is activated

--- a/sdk/signature/Cargo.toml
+++ b/sdk/signature/Cargo.toml
@@ -12,7 +12,7 @@ edition = { workspace = true }
 [dependencies]
 bs58 = { workspace = true }
 ed25519-dalek = { workspace = true, optional = true }
-generic-array = { workspace = true, features = ["serde", "more_lengths"] }
+generic-array = { workspace = true, features = ["more_lengths"] }
 rand = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
@@ -32,7 +32,7 @@ rustc_version = { workspace = true }
 [features]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 rand = ["dep:rand"]
-serde = ["dep:serde", "dep:serde_derive"]
+serde = ["dep:serde", "dep:serde_derive", "generic-array/serde"]
 verify = ["dep:ed25519-dalek"]
 
 [package.metadata.docs.rs]
