--- a/tpu-client/Cargo.toml
+++ b/tpu-client/Cargo.toml
@@ -22,6 +22,7 @@ solana-measure = { workspace = true }
 solana-pubsub-client = { workspace = true }
 solana-rpc-client = { workspace = true }
 solana-rpc-client-api = { workspace = true }
+solana-rpc-response = { workspace = true }
 solana-sdk = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
