--- a/watchtower/Cargo.toml
+++ b/watchtower/Cargo.toml
@@ -21,6 +21,7 @@ solana-metrics = { workspace = true }
 solana-notifier = { workspace = true }
 solana-rpc-client = { workspace = true }
 solana-rpc-client-api = { workspace = true }
+solana-rpc-response = { workspace = true }
 solana-sdk = { workspace = true }
 solana-version = { workspace = true }
 
