--- a/cli-output/Cargo.toml
+++ b/cli-output/Cargo.toml
@@ -24,7 +24,7 @@ serde_json = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-clap-utils = { workspace = true }
 solana-cli-config = { workspace = true }
-solana-rpc-client-api = { workspace = true }
+solana-rpc-response = { workspace = true }
 solana-sdk = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-vote-program = { workspace = true }
