extract commitment-config crate from sdk

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,7 @@ members = [
     "sdk/cargo-test-sbf",
     "sdk/clock",
     "sdk/cpi",
+    "sdk/commitment-config",
     "sdk/decode-error",
     "sdk/derivation-path",
     "sdk/epoch-schedule",
@@ -407,6 +408,7 @@ solana-cli-config = { path = "cli-config", version = "=2.2.0" }
 solana-cli-output = { path = "cli-output", version = "=2.2.0" }
 solana-client = { path = "client", version = "=2.2.0" }
 solana-clock = { path = "sdk/clock", version = "=2.2.0" }
+solana-commitment-config = { path = "sdk/commitment-config", version = "=2.2.0" }
 solana-compute-budget = { path = "compute-budget", version = "=2.2.0" }
 solana-compute-budget-program = { path = "programs/compute-budget", version = "=2.2.0" }
 solana-config-program = { path = "programs/config", version = "=2.2.0" }
