--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -37,6 +37,7 @@ solana-quic-definitions = { workspace = true }
 solana-rpc-client = { workspace = true, features = ["default"] }
 solana-rpc-client-api = { workspace = true }
 solana-rpc-client-nonce-utils = { workspace = true }
+solana-rpc-sender = { workspace = true }
 solana-signature = { workspace = true }
 solana-signer = { workspace = true }
 solana-streamer = { workspace = true }
