--- a/rpc-client/Cargo.toml
+++ b/rpc-client/Cargo.toml
@@ -34,6 +34,7 @@ solana-instruction = { workspace = true }
 solana-message = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-rpc-client-api = { workspace = true }
+solana-rpc-sender = { workspace = true }
 solana-signature = { workspace = true }
 solana-transaction = { workspace = true, features = ["bincode"] }
 solana-transaction-error = { workspace = true }
