update rpc-account-info-config dependents

--- a/account-decoder/Cargo.toml
+++ b/account-decoder/Cargo.toml
@@ -20,6 +20,7 @@ serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
 solana-config-program = { workspace = true }
+solana-rpc-account-info-config = { workspace = true }
 solana-sdk = { workspace = true }
 spl-token = { workspace = true, features = ["no-entrypoint"] }
 spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
