--- a/cli-output/Cargo.toml
+++ b/cli-output/Cargo.toml
@@ -25,6 +25,7 @@ solana-account-decoder = { workspace = true }
 solana-clap-utils = { workspace = true }
 solana-cli-config = { workspace = true }
 solana-rpc-client-api = { workspace = true }
+solana-rpc-account-info-config = { workspace = true }
 solana-sdk = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-vote-program = { workspace = true }
