--- a/ledger-tool/Cargo.toml
+++ b/ledger-tool/Cargo.toml
@@ -43,6 +43,7 @@ solana-logger = { workspace = true }
 solana-measure = { workspace = true }
 solana-program-runtime = { workspace = true }
 solana-rpc = { workspace = true }
+solana-rpc-account-info-config = { workspace = true }
 solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
 solana-sdk = { workspace = true }
 solana-stake-program = { workspace = true }
