--- a/pubsub-client/Cargo.toml
+++ b/pubsub-client/Cargo.toml
@@ -19,6 +19,7 @@ serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
 solana-account-decoder = { workspace = true }
+solana-rpc-account-info-config = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-sdk = { workspace = true }
 thiserror = { workspace = true }
