--- a/rpc-client-nonce-utils/Cargo.toml
+++ b/rpc-client-nonce-utils/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = { workspace = true }
 futures = { workspace = true }
 serde_json = { workspace = true }
 solana-account-decoder = { workspace = true }
+solana-rpc-account-info-config = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 
