--- a/rpc-client/Cargo.toml
+++ b/rpc-client/Cargo.toml
@@ -23,6 +23,7 @@ serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
 solana-account-decoder = { workspace = true }
+solana-rpc-account-info-config = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-sdk = { workspace = true }
 solana-transaction-status = { workspace = true }
