--- a/rpc-test/Cargo.toml
+++ b/rpc-test/Cargo.toml
@@ -23,6 +23,7 @@ solana-account-decoder = { workspace = true }
 solana-client = { workspace = true }
 solana-pubsub-client = { workspace = true }
 solana-rpc = { workspace = true }
+solana-rpc-account-info-config = { workspace = true }
 solana-rpc-client = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-sdk = { workspace = true }
