update account usage in sdk

--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -35,7 +35,7 @@ full = [
     "digest",
 ]
 borsh = ["dep:borsh", "solana-program/borsh", "solana-secp256k1-recover/borsh"]
-dev-context-only-utils = ["qualifier_attr"]
+dev-context-only-utils = ["qualifier_attr", "solana-account/dev-context-only-utils"]
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
@@ -83,6 +83,7 @@ serde_with = { workspace = true, features = ["macros"] }
 sha2 = { workspace = true }
 sha3 = { workspace = true, optional = true }
 siphasher = { workspace = true }
+solana-account = { workspace = true }
 solana-bn254 = { workspace = true }
 solana-decode-error = { workspace = true }
 solana-derivation-path = { workspace = true }
